# forecast-in-a-box

./: .dockerignore  .gitignore  .pre-commit-config.yaml  0001-Implement-model-download-progress-tracking.patch  AGENTS.md  CONTRIBUTING.md  Dockerfile  Dockerfile-uv  DockerfileMARSRocky  IMPLEMENTATION_SUMMARY.md  NOTICE  README.md  compute.sh  docker-compose-cascade.yml  docker-compose-ewc.yml  docker-compose.yml  fiab.sh  id.py  justfile  log.txt  model-download-progress-implementation.patch  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  thermal.yaml
backend/: .gitignore  Dockerfile  Dockerfile.bkp  DockerfileMARSRocky  DockerfileMARSUbuntu  README.md  development.md  fiab.sh  install.sh  justfile  pyproject.toml
backend/forecastbox/: config.py  core.py  db.py  entrypoint.py  func.py  job.db  settings.py  utils.py
backend/forecastbox/api/: __init__.py  database.py  execution.py  graph_building.py  localization.py  types.py  updates.py  utils.py  visualisation.py
backend/forecastbox/api/routers/: admin.py  auth.py  execution.py  fable.py  gateway.py  graph.py  graph_building.py  job.py  jobs.py  model.py  models.py  product.py  products.py  schedule.py  setting.py  settings.py
backend/forecastbox/api/scheduling/: dt_utils.py  job_utils.py  scheduler_thread.py
backend/forecastbox/api/types/: __init__.py  fable.py  graph_building.py
backend/forecastbox/auth/: oauth.py  oidc.py  users.py
backend/forecastbox/controller/: comm.py  db.py  scheduler.py  server.py
backend/forecastbox/db/: __init__.py  core.py  fable.py  job.py  migrations.py  model.py  schedule.py  user.py
backend/forecastbox/models/: globe.py  metadata.py  model.py  nested.py
backend/forecastbox/products/: __init__.py  definitions.py  export.py  extreme.py  forecast.py  generic.py  pproc.py  product.py  registry.py  simple.py  standard.py  thermal.py
backend/forecastbox/products/ensemble/: __init__.py  base.py  basic.py  defined_threshold_probability.yaml  ens_stats.py  quantiles.py  threshold.py  transforms.py
backend/forecastbox/products/plots/: __init__.py  maps.py
backend/forecastbox/products/rjsf/: __init__.py  forms.py  jsonSchema.py  uiSchema.py  utils.py
backend/forecastbox/products/thermal/: __init__.py
backend/forecastbox/rjsf/: forms.py  from_pydantic.py  jsonSchema.py  uiSchema.py
backend/forecastbox/schemas/: job.py  model.py  schedule.py  user.py
backend/forecastbox/standalone/: checks.py  config.py  entrypoint.py  launchers.py  procs.py  service.py
backend/forecastbox/templates/: share.html
backend/scripts/: bigtest.py
backend/src/forecastbox/: __init__.py  config.py  core.py  ecpyutil.py  entrypoint.py
backend/src/forecastbox/api/: artifacts.py  ecpyutil.py  execution.py  fable.py  plugin.py  updates.py  utils.py
backend/src/forecastbox/db/: fable.py  job.py  jobs.py  jobs2.py  migrations.py  schedule.py  user.py
backend/src/forecastbox/domain/: admin.py
backend/src/forecastbox/entrypoint/: __init__.py  app.py  main.py
backend/src/forecastbox/models/: model.py  nested.py
backend/src/forecastbox/products/: __init__.py  pproc.py  product.py  registry.py  standard.py  thermal.py
backend/src/forecastbox/rjsf/: from_pydantic.py  uiSchema.py  utils.py
backend/src/forecastbox/routes/: __init__.py  admin.py  artifacts.py  auth.py  blueprint.py  definition.py  definition_building.py  execution.py  experiment.py  gateway.py  job_definition.py  job_definition_building.py  job_execution.py  lens.py  plugins.py  preset.py  run.py  status.py
backend/src/forecastbox/schemas/: fable.py  jobs.py  jobs2.py
backend/src/forecastbox/schemata/: jobs.py  user.py
backend/src/forecastbox/standalone/: checks.py  entrypoint.py  launchers.py  procs.py
backend/src/forecastbox/utility/: auth.py  concurrent.py  config.py  db.py  dispatcher.py  exception.py  git.py  graph.py  httpx.py  memcache.py  packages.py  pagination.py  pydantic.py  structural.py  time.py  tunnel.py
backend/tests/integration/: conftest.py  test_admin_flows.py  test_blueprint.py  test_db_startup.py  test_fable.py  test_fable_v2_compile.py  test_fable_v2_save.py  test_model.py  test_preset_db.py  test_preset_routes.py  test_register.py  test_schedule.py  test_schedule_v2_persistence.py  test_schedule_v2_runs.py  test_submit_job.py  test_submit_job_v2.py  test_submit_job_v2_execute.py  test_submit_job_v2_read.py  utils.py
backend/tests/integration/data/: .gitignore  fable_test.grib  test.ckpt
backend/tests/largeE2E/: bigtest.py  blueprint.py  scheduler_helper.py
backend/tests/nonpytest/: bigtest.py  blueprint.py  fable.py  scheduler_helper.py
backend/tests/products/: test_selections.py
backend/tests/unit/: func.py  test_artifacts.py  test_ecpyutil.py  test_graph.py  test_jobs.py  test_jobs2.py  test_run_detailed_report.py  test_updates.py
backend/tests/unit/ecpyutil/: test_deepunion.py  test_fetch_file.py
backend/tests/unit/models/: test_model.py
backend/tests/unit/plugins/: test_manager.py  test_stores.py
backend/tests/unit/products/: test_registry.py  test_selections.py
backend/tests/unit/rjsf/: test_forms.py  test_from_pydantic.py  test_jsonSchema.py  test_uiSchema.py  test_utils.py
backend/tests/unit/routes/: test_blueprint.py  test_plugins.py
backend/tests/unit/scheduling/: test_background.py  test_dt_utils.py  test_experiment_runnable.py  test_job_utils.py  test_schedule_runs.py
backend/tests/unit/utility/: test_git.py  test_jobsdb_concurrency.py  test_memcache.py  test_packages.py  test_time.py  test_tunnel.py
backend/tests/utility/: test_tunnel.py
cli/crates/fiab-cli/: Cargo.toml
cli/crates/fiab-cli/src/: cli.rs  config.rs  main.rs  render.rs
experimental/: README.md  pyproject.toml
experimental/src/: abstract.py  bootstrap.py  create.py  enums.py  protocol.py  registry.py
experimental/src/nodes/: anemoi.py  fundamental.py
registry-client/: README.md  pyproject.toml
registry-client/src/fiab_registry_client/: consumer_api.py  producer_api.py  schema.py
rust/crates/fiab-cli/: Cargo.toml
rust/crates/fiab-cli/src/: main.rs  (+2 more)
(+1242 files in other folders)
